Restructure Fabricator dir & fix src paths on static html files

--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
 	
 
 	<!-- toolkit styles -->
-	<link rel="stylesheet" href="../assets/toolkit/styles/toolkit.css">
+	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
 	<!-- /toolkit styles -->
 
 </head>
@@ -32,7 +32,7 @@
 
 
 	<!-- toolkit scripts -->
-	<script src="../assets/toolkit/scripts/toolkit.js"></script>
+	<script src="assets/toolkit/scripts/toolkit.js"></script>
 	<!-- /toolkit scripts -->
 
 </body>
