Add ignore fabricator folder & custom branding

--- a/components.html
+++ b/components.html
@@ -161,10 +161,14 @@
 
 </div>
 <div class="f-item-preview">
-	<button class="button">Submit</button>
+	<button class="btn btn-primary">Submit</button>
+
+<button class="btn btn-lg btn-primary">Submit</button>
 </div>
 <div class="f-item-code f-item-hidden" data-f-toggle="code">
-	<pre><code class="language-markup">&lt;button class=&quot;button&quot;&gt;Submit&lt;/button&gt;</code></pre>
+	<pre><code class="language-markup">&lt;button class=&quot;btn btn-primary&quot;&gt;Submit&lt;/button&gt;
+
+&lt;button class=&quot;btn btn-lg btn-primary&quot;&gt;Submit&lt;/button&gt;</code></pre>
 </div>
 
 
