--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Overview | BB Coo Pattern Library</title>
-
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<title>Overview | Fabricator</title>
 
 	<link rel="stylesheet" href="assets/fabricator/styles/f.css">
 
@@ -159,7 +157,7 @@
 	<div class="f-color-chips">
 		<div class="f-color-chip">
 			<div class="f-color-chip__name">Dark</div>
-			<div class="f-color-chip__color">rgb(30, 30, 30)</div>
+			<div class="f-color-chip__color">#0075DE</div>
 		</div>
 		<div class="f-color-chip">
 			<div class="f-color-chip__name">Light</div>
