--- a/pages/home.html
+++ b/pages/home.html
@@ -10,7 +10,7 @@
 	
 
 	<!-- toolkit styles -->
-	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
+	<link rel="stylesheet" href="../assets/toolkit/styles/toolkit.css">
 	<!-- /toolkit styles -->
 
 </head>
@@ -26,13 +26,15 @@
 		<div>
 			<label for="textInput">Text input</label>
 			<input type="text" id="textInput" />	</div>
-		<button class="button">Submit</button></form></div>
+		<button class="btn btn-primary">Submit</button>
+		
+		<button class="btn btn-lg btn-primary">Submit</button></form></div>
 
 
 
 
 	<!-- toolkit scripts -->
-	<script src="assets/toolkit/scripts/toolkit.js"></script>
+	<script src="../assets/toolkit/scripts/toolkit.js"></script>
 	<!-- /toolkit scripts -->
 
 </body>
