--- a/structures.html
+++ b/structures.html
@@ -158,7 +158,9 @@
     <div>
         <label for="textInput">Text input</label>
         <input type="text" id="textInput" /> </div>
-    <button class="button">Submit</button>
+    <button class="btn btn-primary">Submit</button>
+
+    <button class="btn btn-lg btn-primary">Submit</button>
 </form>
 </div>
 <div class="f-item-code f-item-hidden" data-f-toggle="code">
@@ -166,7 +168,9 @@
     &lt;div&gt;
         &lt;label for=&quot;textInput&quot;&gt;Text input&lt;/label&gt;
         &lt;input type=&quot;text&quot; id=&quot;textInput&quot; /&gt; &lt;/div&gt;
-    &lt;button class=&quot;button&quot;&gt;Submit&lt;/button&gt;
+    &lt;button class=&quot;btn btn-primary&quot;&gt;Submit&lt;/button&gt;
+
+    &lt;button class=&quot;btn btn-lg btn-primary&quot;&gt;Submit&lt;/button&gt;
 &lt;/form&gt;</code></pre>
 </div>
 
