--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 	<title>Overview | Fabricator</title>
 
-	<link rel="stylesheet" href="assets/fabricator/styles/f.css">
+	<link rel="stylesheet" href="/assets/fabricator/styles/f.css">
 
 	<!-- toolkit styles -->
-	<link rel="stylesheet" href="assets/toolkit/styles/toolkit.css">
+	<link rel="stylesheet" href="/assets/toolkit/styles/toolkit.css">
 	<!-- /toolkit styles -->
 
 </head>
@@ -153,29 +153,56 @@
 
 
 <h2>Color</h2>
-
+	<h4>Primary</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">Dark</div>
+			<div class="f-color-chip__name">c_bb_blue</div>
 			<div class="f-color-chip__color">#0075DE</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">Light</div>
-			<div class="f-color-chip__color">rgb(242, 242, 242)</div>
+			<div class="f-color-chip__name">c_bb_midblue</div>
+			<div class="f-color-chip__color">#41B6E6</div>
+		</div>
+		<div class="f-color-chip">
+			<div class="f-color-chip__name">c_bb_lightblue</div>
+			<div class="f-color-chip__color">#E6F0F7</div>
 		</div>
 	</div>
+	<h4>Secondary</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">Red</div>
-			<div class="f-color-chip__color">rgb(201, 55, 6)</div>
+			<div class="f-color-chip__name">c_orange</div>
+			<div class="f-color-chip__color">#F59331</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">Yellow</div>
-			<div class="f-color-chip__color">rgb(252, 207, 80)</div>
+			<div class="f-color-chip__name">c_yellow</div>
+			<div class="f-color-chip__color">#E60E0E</div>
+		</div>
+	</div>
+	<h4>Typography</h4>
+	<div class="f-color-chips">
+		<div class="f-color-chip">
+			<div class="f-color-chip__name">c_darkgrey</div>
+			<div class="f-color-chip__color">#353535</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">Blue</div>
-			<div class="f-color-chip__color">rgb(39, 102, 143)</div>
+			<div class="f-color-chip__name">c_midgrey</div>
+			<div class="f-color-chip__color">#636363</div>
+		</div>
+		<div class="f-color-chip">
+			<div class="f-color-chip__name">c_lightgrey</div>
+			<div class="f-color-chip__color">#A5A5A5</div>
+		</div>
+	</div>
+	<h4>Stroke</h4>
+	<div class="f-color-chips">
+		<div class="f-color-chip">
+			<div class="f-color-chip__name">c_slategrey</div>
+			<div class="f-color-chip__color">#898D8D</div>
+		</div>
+		<div class="f-color-chip">
+			<div class="f-color-chip__name">c_lightgrey</div>
+			<div class="f-color-chip__color">#A5A5A5</div>
 		</div>
 	</div>
 
@@ -193,10 +220,10 @@
 
 
 		</div>
-	<script src="assets/fabricator/scripts/f.js"></script>
+	<script src="/assets/fabricator/scripts/f.js"></script>
 
 	<!-- toolkit scripts -->
-	<script src="assets/toolkit/scripts/toolkit.js"></script>
+	<script src="/assets/toolkit/scripts/toolkit.js"></script>
 	<!-- /toolkit scripts -->
 
 </body>
