Update color naming conventions

--- a/index.html
+++ b/index.html
@@ -156,52 +156,52 @@
 	<h4>Primary</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_bb_blue</div>
+			<div class="f-color-chip__name">primary_alpha</div>
 			<div class="f-color-chip__color">#0075DE</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_bb_midblue</div>
+			<div class="f-color-chip__name">primary_beta</div>
 			<div class="f-color-chip__color">#41B6E6</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_bb_lightblue</div>
+			<div class="f-color-chip__name">primary_charlie</div>
 			<div class="f-color-chip__color">#E6F0F7</div>
 		</div>
 	</div>
 	<h4>Secondary</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_orange</div>
+			<div class="f-color-chip__name">secondary_alpha</div>
 			<div class="f-color-chip__color">#F59331</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_yellow</div>
+			<div class="f-color-chip__name">secondary_beta</div>
 			<div class="f-color-chip__color">#E60E0E</div>
 		</div>
 	</div>
 	<h4>Typography</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_darkgrey</div>
+			<div class="f-color-chip__name">typography_alpha</div>
 			<div class="f-color-chip__color">#353535</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_midgrey</div>
+			<div class="f-color-chip__name">typography_beta</div>
 			<div class="f-color-chip__color">#636363</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_lightgrey</div>
+			<div class="f-color-chip__name">typography_charlie</div>
 			<div class="f-color-chip__color">#A5A5A5</div>
 		</div>
 	</div>
 	<h4>Stroke</h4>
 	<div class="f-color-chips">
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_slategrey</div>
+			<div class="f-color-chip__name">stroke_alpha</div>
 			<div class="f-color-chip__color">#898D8D</div>
 		</div>
 		<div class="f-color-chip">
-			<div class="f-color-chip__name">c_lightgrey</div>
+			<div class="f-color-chip__name">stroke_beta</div>
 			<div class="f-color-chip__color">#A5A5A5</div>
 		</div>
 	</div>
